--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
 
 
     <activity android:name="org.renpy.android.SettingsActivity" android:exported="false"/>
+    <activity android:name="org.renpy.android.DownloadCenterActivity" android:exported="false"/>
 
 
   </application>
